--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "monolog/monolog": "^2.2",
         "php-di/php-di": "^6.3",
         "symfony/console": "^5.2",
-        "aws/aws-sdk-php": "^3.173"
+        "aws/aws-sdk-php": "^3.173",
+        "slim/psr7": "^1.3"
     },
     "autoload": {
         "psr-4": {
