--- a/.env.dist
+++ b/.env.dist
@@ -5,3 +5,5 @@ LOGGER_APPLICATION_NAME="php8-upload-videos"
 LOGGER_DIRECTORY="/var/www/server-side/logs"
 LOGGER_FILENAME="app"
 LOGGER_ROTATION=true
+
+TEMPORALLY_DIRECTORY="/var/www/work-directory/tmp"
