--- a/.env.dist
+++ b/.env.dist
@@ -6,4 +6,5 @@ LOGGER_DIRECTORY="/var/www/server-side/logs"
 LOGGER_FILENAME="app"
 LOGGER_ROTATION=true
 
+# TEMPORALLY DIRECTORY WHERE FILES WILL SAVED
 TEMPORALLY_DIRECTORY="/var/www/work-directory/tmp"
