--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "php-di/php-di": "^6.3",
         "symfony/console": "^5.2",
         "aws/aws-sdk-php": "^3.173",
-        "slim/psr7": "^1.3"
+        "slim/psr7": "^1.3",
+        "php-amqplib/php-amqplib": "^2.12"
     },
     "autoload": {
         "psr-4": {
