Set rabbitmq parameters

--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,9 @@ LOGGER_ROTATION=true
 
 # TEMPORALLY DIRECTORY WHERE FILES WILL SAVED
 TEMPORALLY_DIRECTORY="/var/www/work-directory/tmp"
+
+# RABBITMQ PARAMETERS
+RABBITMQ_HOST=""
+RABBITMQ_PORT=""
+RABBITMQ_USER=""
+RABBITMQ_PASSWORD=""
