Set AWS S3 Client parameters

--- a/.env.dist
+++ b/.env.dist
@@ -14,3 +14,9 @@ RABBITMQ_HOST=""
 RABBITMQ_PORT=""
 RABBITMQ_USER=""
 RABBITMQ_PASSWORD=""
+
+# AWS S3 PARAMETERS
+AWS_REGION=""
+AWS_S3_BUCKET=""
+AWS_CLIENT_ID=""
+AWS_CLIENT_SECRET=""
