--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "symfony/console": "^5.2",
         "aws/aws-sdk-php": "^3.173",
         "slim/psr7": "^1.3",
-        "php-amqplib/php-amqplib": "^2.12"
+        "php-amqplib/php-amqplib": "^2.12",
+        "ramsey/uuid": "^4.1"
     },
     "autoload": {
         "psr-4": {
