--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "aws/aws-sdk-php": "^3.173",
         "slim/psr7": "^1.3",
         "php-amqplib/php-amqplib": "^2.12",
-        "ramsey/uuid": "^4.1"
+        "ramsey/uuid": "^4.1",
+        "doctrine/orm": "^2.8"
     },
     "autoload": {
         "psr-4": {
