--- a/.env.dist
+++ b/.env.dist
@@ -20,3 +20,9 @@ AWS_REGION=""
 AWS_S3_BUCKET=""
 AWS_CLIENT_ID=""
 AWS_CLIENT_SECRET=""
+
+# MARIADB PARAMETERS
+MARIADB_HOST=""
+MARIADB_USER=""
+MARIADB_PASSWORD=""
+MARIADB_DATABASE=""
