--- a/.env.dist
+++ b/.env.dist
@@ -2,7 +2,7 @@ ENV_MODE="DEV"
 
 # LOGGER PARAMETERS
 LOGGER_APPLICATION_NAME="php8-upload-videos"
-LOGGER_DIRECTORY="/var/www/server-side/logs"
+LOGGER_DIRECTORY="/var/www/work-directory/logs"
 LOGGER_FILENAME="app"
 LOGGER_ROTATION=true
 
@@ -10,10 +10,10 @@ LOGGER_ROTATION=true
 TEMPORALLY_DIRECTORY="/var/www/work-directory/tmp"
 
 # RABBITMQ PARAMETERS
-RABBITMQ_HOST=""
-RABBITMQ_PORT=""
-RABBITMQ_USER=""
-RABBITMQ_PASSWORD=""
+RABBITMQ_HOST=messages_agent
+RABBITMQ_PORT=5672
+RABBITMQ_USER=root
+RABBITMQ_PASSWORD=123456
 
 # AWS S3 PARAMETERS
 AWS_REGION=""
@@ -22,8 +22,8 @@ AWS_CLIENT_ID=""
 AWS_CLIENT_SECRET=""
 
 # MARIADB PARAMETERS
-MARIADB_HOST=""
-MARIADB_USER=""
-MARIADB_PASSWORD=""
-MARIADB_DATABASE=""
-MARIADB_PORT=""
+MARIADB_HOST=database_host
+MARIADB_USER=root
+MARIADB_PASSWORD=123456
+MARIADB_DATABASE=videos_db
+MARIADB_PORT=3808
